--- a/DiffusionSampling.ipynb
+++ b/DiffusionSampling.ipynb
@@ -30,7 +30,7 @@
       "source": [
         "from huggingface_hub import login\n",
         "\n",
-        "token = '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'\n",
+        "token = ''\n",
         "login(token=token)"
       ]
     },
