--- a/DiffusionSampling.ipynb
+++ b/DiffusionSampling.ipynb
@@ -15,8 +15,7 @@
         "Before using DeepFloyd, you must accept its usage conditions. To do so:\n",
         "\n",
         "1. Make a [Hugging Face account](https://huggingface.co/join) and log in.\n",
-        "2. Accept the license on the model card of [DeepFloyd/IF-I-XL-v1.0](https://huggingface.co/DeepFloyd/IF-I-XL-v1.0). Accepting the license on the stage I model card will auto accept for the other IF models.\n",
-        "3. Log in locally by entering your [Hugging Face Hub access token](https://huggingface.co/docs/hub/security-tokens#what-are-user-access-tokens) below. You should be able to find and create tokens [here](https://huggingface.co/settings/tokens)."
+        "2. Accept the license on the model card of [DeepFloyd/IF-I-XL-v1.0](https://huggingface.co/DeepFloyd/IF-I-XL-v1.0). "
       ]
     },
     {
@@ -140,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -470,506 +469,7 @@
         "id": "lnI33uFjQqx3",
         "outputId": "cb57aa7a-008f-4c19-b179-0dad1e3e42cd"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.11/dist-packages/huggingface_hub/utils/_auth.py:94: UserWarning: \n",
-            "The secret `HF_TOKEN` does not exist in your Colab secrets.\n",
-            "To authenticate with the Hugging Face Hub, create a token in your settings tab (https://huggingface.co/settings/tokens), set it as secret in your Google Colab and restart your session.\n",
-            "You will be able to reuse this secret in all of your notebooks.\n",
-            "Please note that authentication is recommended but still optional to access public models or datasets.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "5afc010692c24b9184352ff95727c69d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "model_index.json:   0%|          | 0.00/604 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "A mixture of fp16 and non-fp16 filenames will be loaded.\n",
-            "Loaded fp16 filenames:\n",
-            "[text_encoder/model.fp16-00002-of-00002.safetensors, text_encoder/model.fp16-00001-of-00002.safetensors, unet/diffusion_pytorch_model.fp16.safetensors, safety_checker/model.fp16.safetensors]\n",
-            "Loaded non-fp16 filenames:\n",
-            "[watermarker/diffusion_pytorch_model.safetensors\n",
-            "If this behavior is not expected, please check your folder structure.\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "8c8ce3613fb04e37998d3ac0d9f6b2a7",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Fetching 12 files:   0%|          | 0/12 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "fbc84f802278487689a2c5eecfd566ca",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "model.fp16.safetensors:   0%|          | 0.00/608M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "90172447112941b788e85480966e4a37",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/4.57k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "fdfbbca9306842e9863e79f8fbb70a4d",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "scheduler_config.json:   0%|          | 0.00/454 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "4f7a56ed4a7944b38af16fb116fb5093",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "preprocessor_config.json:   0%|          | 0.00/518 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "62077cafe26245d3863397519c5436d3",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "special_tokens_map.json:   0%|          | 0.00/2.20k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "a4b0f035ee2b42699a27544611f0e024",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer_config.json:   0%|          | 0.00/2.54k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b48ded3247484296af691cc9d0e8d3c3",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "spiece.model:   0%|          | 0.00/792k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "65ade51b6e6649d8b76b4d2bfac9d902",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/1.63k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c8453656e90145b8bcf7e521258dc9e9",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "diffusion_pytorch_model.fp16.safetensors:   0%|          | 0.00/1.87G [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "02f8d85e89cf49bd84fb9a9117ed9fdf",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "diffusion_pytorch_model.safetensors:   0%|          | 0.00/15.5k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "aaf3dd2d6bbf4a12b2ef5c5583ef0930",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/74.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c5bd02f79d4c43a68559ae0c512b01c5",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Loading pipeline components...:   0%|          | 0/6 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f195e1e4686b4ba9b7a854a99a9609dd",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "model_index.json:   0%|          | 0.00/692 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "A mixture of fp16 and non-fp16 filenames will be loaded.\n",
-            "Loaded fp16 filenames:\n",
-            "[text_encoder/model.fp16-00002-of-00002.safetensors, text_encoder/model.fp16-00001-of-00002.safetensors, unet/diffusion_pytorch_model.fp16.safetensors, safety_checker/model.fp16.safetensors]\n",
-            "Loaded non-fp16 filenames:\n",
-            "[watermarker/diffusion_pytorch_model.safetensors\n",
-            "If this behavior is not expected, please check your folder structure.\n"
-          ]
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "e81d62a159284dffaa1c2d147c40379b",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Fetching 13 files:   0%|          | 0/13 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d20e1f3fcd8840a893a1e03762640752",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "model.fp16.safetensors:   0%|          | 0.00/608M [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "b9af58f837ae4e6eb3d253d4c7111b66",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "spiece.model:   0%|          | 0.00/792k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "2e0987cdb7da4995be5c98955b5e1dea",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "tokenizer_config.json:   0%|          | 0.00/2.50k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "923bb1ea208e429aa15f9ab3b4a652ed",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "special_tokens_map.json:   0%|          | 0.00/2.20k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "7340a21dcb564bf88f25e2d0d4544743",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "scheduler_config.json:   0%|          | 0.00/454 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "0994651188984723939692ef2956feb7",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "scheduler_config.json:   0%|          | 0.00/424 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "d409019ed7fb4d0e87f3d19afbce0a65",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "preprocessor_config.json:   0%|          | 0.00/518 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "f0690f8029f64ad58f44032157c20a12",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/4.92k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "6251951873d54f018a3573167e8ac8b8",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "diffusion_pytorch_model.fp16.safetensors:   0%|          | 0.00/2.49G [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "89d2974bd5134101bf577ca3159e4212",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/1.72k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "57e579e974404b5d8730187c8f158694",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "diffusion_pytorch_model.safetensors:   0%|          | 0.00/15.5k [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "c4b4ea82b55849839ea72f7576974d7e",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "config.json:   0%|          | 0.00/74.0 [00:00<?, ?B/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "10fda7d9e51f43e38e90471bbc7785f7",
-              "version_major": 2,
-              "version_minor": 0
-            },
-            "text/plain": [
-              "Loading pipeline components...:   0%|          | 0/7 [00:00<?, ?it/s]"
-            ]
-          },
-          "metadata": {},
-          "output_type": "display_data"
-        },
-        {
-          "data": {
-            "text/plain": [
-              "IFSuperResolutionPipeline {\n",
-              "  \"_class_name\": \"IFSuperResolutionPipeline\",\n",
-              "  \"_diffusers_version\": \"0.32.2\",\n",
-              "  \"_name_or_path\": \"DeepFloyd/IF-II-L-v1.0\",\n",
-              "  \"feature_extractor\": [\n",
-              "    \"transformers\",\n",
-              "    \"CLIPImageProcessor\"\n",
-              "  ],\n",
-              "  \"image_noising_scheduler\": [\n",
-              "    \"diffusers\",\n",
-              "    \"DDPMScheduler\"\n",
-              "  ],\n",
-              "  \"requires_safety_checker\": true,\n",
-              "  \"safety_checker\": [\n",
-              "    \"deepfloyd_if\",\n",
-              "    \"IFSafetyChecker\"\n",
-              "  ],\n",
-              "  \"scheduler\": [\n",
-              "    \"diffusers\",\n",
-              "    \"DDPMScheduler\"\n",
-              "  ],\n",
-              "  \"text_encoder\": [\n",
-              "    null,\n",
-              "    null\n",
-              "  ],\n",
-              "  \"tokenizer\": [\n",
-              "    \"transformers\",\n",
-              "    \"T5Tokenizer\"\n",
-              "  ],\n",
-              "  \"unet\": [\n",
-              "    \"diffusers\",\n",
-              "    \"UNet2DConditionModel\"\n",
-              "  ],\n",
-              "  \"watermarker\": [\n",
-              "    \"deepfloyd_if\",\n",
-              "    \"IFWatermarker\"\n",
-              "  ]\n",
-              "}"
-            ]
-          },
-          "execution_count": 5,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Load DeepFloyd IF stage I\n",
         "stage_1 = DiffusionPipeline.from_pretrained(\n",
