--- a/DiffusionUnet_Implementation.ipynb
+++ b/DiffusionUnet_Implementation.ipynb
@@ -6,11 +6,7 @@
         "id": "kR0SKBDbaOqR"
       },
       "source": [
-        "# CS5670 Project 5B\n",
-        "\n",
-        "In this problem set, you will train your own diffusion model on the MNIST dataset. You’ll build and train UNet-based diffusion models, gaining hands-on experience with both unconditional and class-conditioned generation.\n",
-        "\n",
-        "Please refer to the [Project 5B instructions page](https://www.cs.cornell.edu/courses/cs5670/2025sp/projects/5_project/partB.html) for detailed descriptions of each task and submission instructions."
+        "# Training UNet based diffusion model on MNIST dataset",
       ]
     },
     {
